apps/gin-helloworld/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gin-helloworld
  labels:
    app: gin-helloworld
spec:
  type: NodePort
  ports:
    - port: 8888
      protocol: TCP
  selector:
    app: gin-helloworld
