apps/gin-helloworld/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gin-helloworld-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: gin-helloworld.kube.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gin-helloworld
            port:
              number: 8888
